--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["google", "analytics"],
     "require": {
         "php": ">=7.0",
-        "guzzlehttp/guzzle": "~6.0",
-        "google/apiclient": "^2.4"
+        "guzzlehttp/guzzle": "^7.2",
+        "google/apiclient": "^2.7"
     }
 }
