--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,12 @@
 
 version: 2
 updates:
-  - package-ecosystem: "composer"
+  - package-ecosystem: npm
+    open-pull-requests-limit: 10
     directory: "/"
+    commit-message:
+      prefix: build
+      prefix-development: chore
+      include: scope
     schedule:
-      interval: "daily"
+      interval: daily
