--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -41,9 +41,9 @@ jobs:
         uses: michaelw90/PHP-Lint@2.1.0
 
       # https://github.com/marketplace/actions/owasp-zap-full-scan
-      - name: OWASP ZAP Full Scan
-        uses: zaproxy/action-full-scan@v0.2.0
+      #- name: OWASP ZAP Full Scan
+      #  uses: zaproxy/action-full-scan@v0.2.0
 
       # https://github.com/marketplace/actions/dependabot-auto-merge
-      # - name: Dependabot Auto Merge
-      # uses: ahmadnassri/action-dependabot-auto-merge@v2.2.0
+      - name: Dependabot Auto Merge
+        uses: ahmadnassri/action-dependabot-auto-merge@v2.2.0
