--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["google", "analytics"],
     "license": "GPL-2.0-only",
     "require": {
-        "php": "^7.1.3",
+        "php": ">=7.4",
         "guzzlehttp/guzzle": "^7.2",
         "google/apiclient": "^2.7"
     },
