--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -3,14 +3,11 @@ name: PHP-CS-Fixer syle check
 on: [push]
 
 jobs:
-  build:
-
+  php-cs-fixer:
+    name: PHP-CS-Fixer
     runs-on: ubuntu-latest
-
-    name: Code Syle
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       - name: PHP-CS-Fixer
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
