--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -1,13 +1,13 @@
 name: PHP-CS-Fixer syle check
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   php-cs-fixer:
     name: PHP-CS-Fixer
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: PHP-CS-Fixer
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
