--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: PHP-CS-Fixer
         uses: docker://oskarstark/php-cs-fixer-ga
-        # with:
-        #  args: --config=.php_cs.dist --diff --dry-run
+        with:
+          args: --config=.php_cs.dist --diff --dry-run
