--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,34 +1,49 @@
-$rules = [
-    '@PSR2' => true,
-    'array_syntax' => ['syntax' => 'short'],
-    'no_multiline_whitespace_before_semicolons' => true,
-    'no_short_echo_tag' => true,
-    'no_unused_imports' => true,
-    'not_operator_with_successor_space' => true,
-    'no_useless_else' => true,
-    'ordered_imports' => [
-        'sortAlgorithm' => 'length',
-    ],
-    'phpdoc_add_missing_param_annotation' => true,
-    'phpdoc_indent' => true,
-    'phpdoc_no_package' => true,
-    'phpdoc_order' => true,
-    'phpdoc_separation' => true,
-    'phpdoc_single_line_var_spacing' => true,
-    'phpdoc_trim' => true,
-    'phpdoc_var_without_name' => true,
-    'phpdoc_to_comment' => true,
-    'single_quote' => true,
-    'ternary_operator_spaces' => true,
-    'trailing_comma_in_multiline_array' => true,
-    'trim_array_spaces' => true,
+// Default rules set to use when fixing files.	
+// See : https://gistlog.co/sixlive/2862a2185c76988838acaa45687a575c
+$rules = [	
+    '@PSR2' => true,	
+    'array_indentation' => true,	
+    'array_syntax' => [	
+        'syntax' => 'short',	
+    ],	
+    'no_blank_lines_after_phpdoc' => true,	
+    'no_extra_blank_lines' => [	
+        'tokens' => ['curly_brace_block', 'extra', 'parenthesis_brace_block', 'square_brace_block', 'throw', 'use'],	
+    ],	
+    'no_multiline_whitespace_before_semicolons' => true,	
+    'no_short_echo_tag' => true,	
+    'no_unused_imports' => true,	
+    'no_useless_else' => true,	
+    'not_operator_with_successor_space' => true,	
+    'ordered_imports' => [	
+        'sortAlgorithm' => 'length',	
+    ],	
+    'phpdoc_add_missing_param_annotation' => true,	
+    'phpdoc_indent' => true,	
+    'phpdoc_no_package' => true,	
+    'phpdoc_order' => true,	
+    'phpdoc_separation' => true,	
+    'phpdoc_single_line_var_spacing' => true,	
+    'phpdoc_to_comment' => true,	
+    'phpdoc_trim' => true,	
+    'phpdoc_var_without_name' => true,	
+    'single_quote' => true,	
+    'ternary_operator_spaces' => true,	
+    'trailing_comma_in_multiline_array' => true,	
+    'trim_array_spaces' => true,	
 ];
 
-$excludes = [
-    'vendor',
-    'storage',
-    'node_modules',
-];
+// Directories to exclude when fixing files.	
+$exclude = [	
+    'config',	
+    'docs',	
+    'logs',	
+    'bootstrap/cache',	
+    'vendor',	
+    'storage',	
+    'node_modules',	
+    'nbproject',	
+];	
 
 return PhpCsFixer\Config::create()
     ->setRules($rules)
@@ -39,5 +54,10 @@ return PhpCsFixer\Config::create()
             ->notName('README.md')
             ->notName('*.xml')
             ->notName('*.yml')
+            ->notName('*.xml')
             ->notName('_ide_helper.php')
+            ->notName('_ide_helper_models.php')
+            ->notName('.phpstorm.meta.php')
+            ->ignoreDotFiles(true)	
+            ->ignoreVCS(true)
     );
